[gd_scene load_steps=5 format=3 uid="uid://civyjtqi6du8b"]

[ext_resource type="Script" uid="uid://beloibwkcrove" path="res://card_system/scripts/blankcard.gd" id="1_lqxfj"]
[ext_resource type="Texture2D" uid="uid://dh7aolvsjteo5" path="res://assets/Card/white_circle.png" id="2_lqxfj"]
[ext_resource type="PackedScene" uid="uid://chh2o6g05mg58" path="res://card_system/scenes/line_trail.tscn" id="3_v4edt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_45e0r"]
radius = 3.28295

[node name="BlankCard" type="Area2D" groups=["Card", "Player_Bullet"]]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_lqxfj")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_lqxfj")

[node name="Collision2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_45e0r")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Line2D" parent="." instance=ExtResource("3_v4edt")]

[connection signal="area_entered" from="." to="." method="enemy_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
